<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="icon" tools:ignore="MissingTranslation">icon</string>
    <string name="line" tools:ignore="MissingTranslation"> image_line</string>
    <string name="phone_number" tools:ignore="MissingTranslation">手机号</string>
    <string name="or" tools:ignore="MissingTranslation">或</string>
    <string name="login" tools:ignore="MissingTranslation">登录</string>
    <string name="phone_number_login" tools:ignore="MissingTranslation">手机号登录</string>
    <string name="phone_number_hint" tools:ignore="MissingTranslation">输入手机号</string>
    <string name="verify_code" tools:ignore="MissingTranslation">验证码</string>
    <string name="get_verify_code" tools:ignore="MissingTranslation">获取验证码</string>
    <string name="gotit" tools:ignore="MissingTranslation">知道了</string>
</resources>