<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="322dp"
    android:layout_height="310dp"
    android:layout_gravity="center">

    <FrameLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image_background">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/line"
                android:src="@drawable/image_back" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@null" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@id/imageView"
                android:layout_toEndOf="@id/button_back"
                android:gravity="center"
                android:text="@string/phone_number_login"
                android:textColor="#050505"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/image_logo" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/k_shadow">

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_above="@id/button_get_verify_code"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/phone_number_hint"
                android:imeOptions="flagNoExtractUi"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="#25A2FF"
                android:textColorHint="#ccc"
                android:textCursorDrawable="@drawable/k_bg_gray"
                android:textSize="14sp"
                android:importantForAutofill="no">

                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/imv_fenge"
                android:layout_width="270dp"
                android:layout_height="1dp"
                android:layout_above="@id/edt_login_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:background="#eee"
                android:contentDescription="@string/line" />

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="16dp"
                android:background="@null"
                android:hint="@string/verify_code"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="#25A2FF"
                android:textColorHint="#ccc"
                android:textCursorDrawable="@drawable/k_bg_gray"
                android:textSize="14sp"
                android:importantForAutofill="no">

            </EditText>

            <Button
                android:id="@+id/button_get_verify_code"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/image_button3"
                android:text="@string/get_verify_code" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/image_button1"
                android:text="@string/login" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>